# Proyecto3-Investigacion

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
